# skill-map

./: README.md  pyproject.toml
oop/: Clinic.py  Human.py  Patient.py  main.py
python/: lesson1.py  lesson2.py  lesson3.py  lesson4.py  lesson5.py  lesson6.py  lesson7.py  lesson8.py
