[tool.poetry]
name = "skill-map"
version = "0.1.0"
description = ""
authors = ["s-tsuchida-safie <s-tsuchida@safie.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
